# planmode-bench

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy-website.yml
results/: latest.json
results/runs/2026-04-03T10-20-02-561Z/: summary.json
results/runs/2026-04-03T10-20-48-188Z/: summary.json
results/runs/2026-04-03T10-23-24-033Z/: summary.json
results/runs/2026-04-03T10-27-25-008Z/: summary.json
results/runs/2026-04-03T10-49-22-591Z/: summary.json
results/runs/2026-04-03T15-16-24-163Z/: summary.json
results/runs/2026-04-03T15-21-44-768Z/: summary.json
results/runs/2026-04-03T16-04-52-918Z/: summary.json
results/runs/2026-04-03T21-43-40-335Z/: summary.json
results/runs/2026-04-03T21-44-17-622Z/: summary.json
results/runs/2026-04-03T22-19-49-396Z/: meta.json
results/runs/2026-04-03T22-22-38-575Z/: meta.json
results/runs/2026-04-03T22-25-20-619Z/: meta.json  summary.json
results/runs/2026-04-03T23-13-17-524Z/: meta.json  summary.json
results/runs/2026-04-03T23-47-49-745Z/: meta.json  summary.json
results/runs/2026-04-04T12-00-44-160Z/: meta.json  summary.json
results/runs/2026-04-04T12-13-43-578Z/: meta.json  summary.json
results/runs/2026-04-04T12-22-23-600Z/: meta.json
scripts/: augment-website-data.py
tasks/feature-addition/add-cli-search/scaffold/: pyproject.toml
tasks/feature-addition/add-cli-search/scaffold/src/: cli.py  formatter.py  models.py  storage.py
tasks/feature-addition/add-cli-search/scaffold/tests/: test_search.py  test_storage.py
(+5808 files in other folders)
