[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-cli"
version = "1.0.0"
description = "A CLI tool for managing a local bookmark collection"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[project.scripts]
bookmark = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
